# EMMK-3A

IA_embedded/proj/: GradiantDescentWithMomentum.py  TP_MLP_numpy_jouet_et_MNIST.ipynb  load_MNIST.py  main_partie1.py  main_partie2.py  utils.py
IA_embedded/proj/CNN/: CNN.py  MLP.py  main.py  main_correction_CNN.py:Zone.Identifier  train.py
IA_embedded/proj/NumPy/: MLP.py  functions.py  train.py
IA_embedded/proj/PyTorch/: GradiantDescentWithMomentum.py  functions.py  main.py
robotic/: readme.md
robotic/src/sorting/: CMakeLists.txt  README.md  package.xml
robotic/src/sorting/include/: sorting.hpp
robotic/src/sorting/src/: hello_node.cpp  sorting.cpp  sorting_node.cpp
robotic/src/sorting_msgs/: CMakeLists.txt  package.xml
robotic/src/sorting_msgs/srv/: ToggleSorting.srv
