<?xml version="1.0"?>
<package format="2">
  <name>sorting_msgs</name>
  <version>0.0.1</version>
  <description>Service definitions for sorting</description>
  <maintainer email="rouaf@todo.todo">rouaf</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- obligatoire pour que ros traduise mon .srv en un .h -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Export pour les paquets qui dépendent de celui-ci -->
  <build_export_depend>std_msgs</build_export_depend>

  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
